--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,7 @@ android {
         develop {
             applicationIdSuffix ".dev"
             resValue 'string', 'app_name', "Finza Dev"
-            buildConfigField 'String', 'BASE_URL', "\"https://stag.api.riggleapp.in/api/v1/\""
+            buildConfigField 'String', 'BASE_URL', "\"https://stagging.cluecoded.com/api/\""
         }
         production {
             resValue 'string', 'app_name', "Finza"
