get profile implemented

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -159,6 +159,8 @@ dependencies {
     implementation 'jp.wasabeef:blurry:4.0.1'
     // razor pay
     implementation 'com.razorpay:checkout:1.6.40'
+    implementation 'com.github.kal72:RackMonthPicker:1.6.1'
+
 }
 kapt {
     correctErrorTypes true
