--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,15 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".ui.finza.issuance.IssuanceActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.finza.profile.ProfileActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.finza.inventory.InventoryActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.finza.issueSuperTag.IssueSuperTagActivity"
             android:exported="false" />
         <activity
@@ -63,7 +72,6 @@
         <activity
             android:name=".ui.resetPassword.ResetPasswordActivity"
             android:exported="false" />
-
         <activity
             android:name=".ui.login.LoginActivity"
             android:exported="false"
@@ -103,8 +111,9 @@
                 android:resource="@xml/provider_paths" />
         </provider>
 
-        <meta-data android:name="com.razorpay.ApiKey"
-            android:value="rzp_test_Nqy8gmPWtyPySL"/>
+        <meta-data
+            android:name="com.razorpay.ApiKey"
+            android:value="rzp_test_Nqy8gmPWtyPySL" />
     </application>
 
 </manifest>
