--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,21 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".ui.finza.helpAndSupport.fitmentCerti.FitmentCertificateActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.finza.helpAndSupport.needFastag.NeedFastagActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.finza.helpAndSupport.updateVehicleNumber.UpdateVehicleNumberActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.finza.helpAndSupport.replaceFASTag.ReplaceFASTagActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.finza.helpAndSupport.kyc.UpdateKYCActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.finza.issuance.IssuanceActivity"
             android:exported="false" />
         <activity
