--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,22 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".ui.finza.issueSuperTag.fastagReg.FastagRegistrationActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.finza.issueSuperTag.uploadDocs.UploadDocumentActivity"
+            android:exported="false"
+            android:theme="@style/Theme.MyApplication" />
+        <activity
+            android:name=".ui.finza.issueSuperTag.userDetails.UserDetailsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.finza.issueSuperTag.verifyOtp.VerifyOtpActivity"
+            android:exported="true" />
+        <activity
+            android:name=".ui.finza.issueSuperTag.verify.VerifyTagActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.finza.helpAndSupport.fitmentCerti.FitmentCertificateActivity"
             android:exported="false" />
         <activity
@@ -85,7 +101,7 @@
             android:name=".ui.finza.FinzaHomeActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.resetPassword.ResetPasswordActivity"
+            android:name=".ui.resetPassword.ForgotPasswordActivity"
             android:exported="false" />
         <activity
             android:name=".ui.login.LoginActivity"
