--- a/app/build.gradle
+++ b/app/build.gradle
@@ -160,6 +160,7 @@ dependencies {
     // razor pay
     implementation 'com.razorpay:checkout:1.6.40'
     implementation 'com.github.mukeshsolanki.android-otpview-pinview:otpview:3.1.0'
+    implementation 'com.github.dhaval2404:imagepicker:2.1'
 
 }
 kapt {
