--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -32,7 +32,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication"
         android:usesCleartextTraffic="true"
-        tools:targetApi="31">
+        tools:targetApi="31" >
+        <activity
+            android:name=".ui.finza.resetPass.ResetPassActivity"
+            android:exported="false" />
         <activity
             android:name=".ui.finza.issueSuperTag.fastagReg.FastagRegistrationActivity"
             android:exported="false" />
@@ -101,7 +104,7 @@
             android:name=".ui.finza.FinzaHomeActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.resetPassword.ForgotPasswordActivity"
+            android:name=".ui.forgotPassword.ForgotPasswordActivity"
             android:exported="false" />
         <activity
             android:name=".ui.login.LoginActivity"
@@ -110,7 +113,7 @@
         <activity
             android:name=".ui.splash_screen.SplashScreenActivity"
             android:exported="true"
-            android:windowSoftInputMode="adjustPan">
+            android:windowSoftInputMode="adjustPan" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -122,7 +125,7 @@
             android:name="androidx.core.content.FileProvider"
             android:authorities="com.riggle.plug.fileProvider"
             android:exported="false"
-            android:grantUriPermissions="true">
+            android:grantUriPermissions="true" >
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/provider_paths" />
@@ -136,7 +139,7 @@
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.provider"
             android:exported="false"
-            android:grantUriPermissions="true">
+            android:grantUriPermissions="true" >
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/provider_paths" />
