--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,11 +26,12 @@ android {
         develop {
             applicationIdSuffix ".dev"
             resValue 'string', 'app_name', "Finza Dev"
-            buildConfigField 'String', 'BASE_URL', "\"https://stagging.cluecoded.com/api/\""
+            buildConfigField 'String', 'BASE_URL', "\"https://my.thefinza.com/\""
+         //   buildConfigField 'String', 'BASE_URL', "\"https://stagging.cluecoded.com/api/\""
         }
         production {
             resValue 'string', 'app_name', "Finza"
-            buildConfigField 'String', 'BASE_URL', "\"https://api.riggleapp.in/api/v1/\""
+            buildConfigField 'String', 'BASE_URL', "\"https://mythefinza.com/\""
         }
 
         android.applicationVariants.all { variant ->
