--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
-        android:name="com.riggle.finza_finza.App"
+        android:name=".App"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -33,6 +33,12 @@
         android:theme="@style/Theme.MyApplication"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <activity
+            android:name=".ui.finza.inventory.incoming.DispatchDetailsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.finza.inventory.forwarded.ForwardedDetailsActivity"
+            android:exported="false" />
         <activity
             android:name=".ui.finza.inWallet.InventoryWalletActivity"
             android:exported="false" />
