replacement testing in progress

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -168,6 +168,7 @@ dependencies {
     implementation(platform("com.google.firebase:firebase-bom:33.4.0"))
     implementation("com.google.firebase:firebase-crashlytics")
     implementation("com.google.firebase:firebase-analytics")
+    implementation 'com.github.kal72:RackMonthPicker:1.6.1'
 }
 kapt {
     correctErrorTypes true
