filter issue done

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".ui.finza.issuance.bad.BadDetailsActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.finza.avtivation.ActivationSummaryDetailsActivity"
             android:exported="false" />
         <activity
