--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Aug 24 07:29:15 PDT 2024
-sdk.dir=C\:\\Users\\hp\\AppData\\Local\\Android\\Sdk
+#Thu Feb 27 11:45:10 IST 2025
+sdk.dir=/home/harman/Android/Sdk
